--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,24 @@
 body {
   background: #fff url("http://www.scan3d4d.com/_images/background_fades/home_bgfade.jpg") 0 0 repeat-x;
 }
+
+.grey_background{
+  background-color: #bdc3c7;
+}
+
+.asphalt_background{
+  background-color: #34495e;
+}
+.green_background{
+  background-color: #2ecc71;
+  height:120px;
+}
+
+.bradius_10{
+  border-radius: 10px;
+}
+
+.super_header{
+  height:100px;
+  
+}
