--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,10 @@ body {
   background-color: #34495e;
 }
 .green_background{
-  background-color: #2ecc71;
+  /*background-color: #2ecc71;*/
   height:120px;
+  background: url("http://www.arvielectrosoft.in/images/header/main-inside-header-bg.jpg") 0 0 ;
+  background-size:100% 100%;
 }
 
 .bradius_10{
