Added LESS functionality...

--- a/less/content.less
+++ b/less/content.less
@@ -1,1 +1,20 @@
 // Insert your styling here.
+
+@media screen and (min-width: 768px) {
+  .sitewide_header {
+	background-color:red;
+	background: url("../images/header1108x100.jpg") 0 0 ;
+  	background-size:100% 100%;
+	}
+}
+@media screen and (max-width: 767px) {
+  .sitewide_header {
+    background-color: black;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .sitewide_header {
+    background-color: red;
+  }
+}
